--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <section class="cards">
-    <div class="card">
+  <ul class="cards">
+    <li class="card">
       <div class="card-icon">
         <img class="card-img" src="images/atlas.svg" alt="">
       </div>
@@ -16,8 +16,8 @@
         <h2>Atlas moth</h2>
         <p class="card-body">A large moth found in the tropical and subtropical forests of Southeast Asia</p>
       </div>
-    </div>
-    <div class="card">
+    </li>
+    <li class="card">
       <div class="card-icon">
         <img class="card-img" src="images/hercules.svg" alt="">
       </div>
@@ -25,8 +25,8 @@
         <h2>Hercules Moth</h2>
         <p class="card-body">It has a wingspan of ~27 cm, making it the largest moth found in the world</p>
       </div>
-    </div>
-    <div class="card">
+    </li>
+    <li class="card">
       <div class="card-icon">
         <img class="card-img" src="images/ornate.svg" alt="">
       </div>
@@ -34,7 +34,7 @@
         <h2>Ornate moth</h2>
         <p class="card-body">It is colored from pink, red, orange and yellow to white with black markings</p>
       </div>
-    </div>
-  </section>
+    </li>
+  </ul>
 </body>
 </html>
