Fix code errors

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <ul class="cards">
     <li class="card">
-      <div class="card-icon">
-        <img class="card-img" src="images/atlas.svg" alt="">
+      <div class="card-img">
+        <img src="images/atlas.svg" alt="">
       </div>
       <div class="card-content">
         <h2>Atlas moth</h2>
@@ -18,8 +18,8 @@
       </div>
     </li>
     <li class="card">
-      <div class="card-icon">
-        <img class="card-img" src="images/hercules.svg" alt="">
+      <div class="card-img">
+        <img src="images/hercules.svg" alt="">
       </div>
       <div class="card-content">
         <h2>Hercules Moth</h2>
@@ -27,8 +27,8 @@
       </div>
     </li>
     <li class="card">
-      <div class="card-icon">
-        <img class="card-img" src="images/ornate.svg" alt="">
+      <div class="card-img">
+        <img src="images/ornate.svg" alt="">
       </div>
       <div class="card-content">
         <h2>Ornate moth</h2>
